# adminer

./: .gitignore  .mcp.json  CLAUDE.md  README.md  UPDATE.md  composer.json  phpcs.xml
.claude/commands/: fix.md  pr.md  rebuild-web.md  test-web.md
.github/workflows/: ci.yml  publish-docker.yml
.serena/memories/: adminer_bigquery_analysis.md  adminer_testing_comprehensive_guide.md  aws_ecs_production_environment_configuration_2025-10-10.md  bigquery_authentication_analysis.md  bigquery_docker_testing_workflow.md  bigquery_driver_implementation.md  bigquery_env_var_authentication_fix_2025-09.md  bigquery_env_var_standardization_completion_2025-09.md  bigquery_project_final_phase_2025-09.md  bigquery_search_where_clause_analysis_2025-09-21.md  comprehensive_bigquery_project_analysis.md  copilot_pr_review_comprehensive_handling_2025-09-21.md  directory_structure_e2e_migration_2025-09-29.md  directory_structure_update_2025-09.md  e2e_comprehensive_testing_and_ui_issues_2025-09-21.md  i03_task_completion_2025-09-20.md  (+12 more)
container/: Dockerfile
devtools/: .gitignore  UPDATE.md
devtools/cdk/: README.md  adminer_gbq.py  app.py  cdk.context.json  cdk.json  pyproject.toml
devtools/cdk/config/env/: __init__.py  dev.py
devtools/cdk/lib/: __init__.py  base_resource.py  default_patterns.py  fargate_service_pattern.py
docs/: bigquery-driver-development-guidelines.md  development-workflow.md  dood-test-container-operations-guide.md
issues/: i01.md  i02.md  plan01.md  plan02.md  plan03.md  report02.md
plugins/: bigquery-config.php  bigquery-css.php  login-bigquery.php
(+161 files in other folders)
